--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ asdjfh/Library/ArtifactDB
 
 asdjfh/Library/ArtifactDB-lock
 asdjfh/Library/ArtifactDB
+asdjfh/Library/ArtifactDB
+asdjfh/Library/ArtifactDB-lock
