--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,8 @@ asdjfh/Library/ArtifactDB
 
 asdjfh/Library/ArtifactDB-lock
 asdjfh/Library/ArtifactDB
-asdjfh/Library/ArtifactDB
+asdjfh\Library\ArtifactDB
 asdjfh/Library/ArtifactDB-lock
-asdjfh/Library/ArtifactDB
-asdjfh/Library/ArtifactDB-lock
+ArtifactDB
+ArtifactDB-lock
+asdjfh/Library/Artifacts
